--- a/examples/echo/index.html
+++ b/examples/echo/index.html
@@ -1,7 +1,7 @@
 <!doctype html5>
 <html>
 <head>
-   <title>dice demo</title>
+   <title>echo demo</title>
    <style type="text/css">
       body {
         font-family: monospace;
